--- a/dataverse-webapp/src/main/webapp/permissions-manage-files.xhtml
+++ b/dataverse-webapp/src/main/webapp/permissions-manage-files.xhtml
@@ -29,7 +29,7 @@
                     <div class="panel-group">
                         <!-- Users/Groups Access Panel -->
                         <div class="panel panel-default">
-                            <div data-toggle="collapse" data-target="#panelCollapseUsersGroups" class="panel-heading text-info">
+                            <div data-toggle="collapse" data-target="#panelCollapseUsersGroups" class="panel-heading text-info" tabindex="0">
                                 #{bundle['dataverse.permissionsFiles.usersOrGroups']} <span class="glyphicon glyphicon-chevron-up"/>
                                 
                                 <span class="text-muted small pull-right">#{bundle['dataverse.permissionsFiles.usersOrGroups.description']}</span>
@@ -139,7 +139,7 @@
                         </div>
                         <!-- Files (Restricted) Panel -->
                         <div class="panel panel-default">
-                            <div data-toggle="collapse" data-target="#panelCollapseFiles" class="panel-heading text-info">
+                            <div data-toggle="collapse" data-target="#panelCollapseFiles" class="panel-heading text-info" tabindex="0">
                                 #{bundle['dataverse.permissionsFiles.files']} <span class="glyphicon glyphicon-chevron-down"/>
                                 
                                 <span class="text-muted small pull-right">#{bundle['dataverse.permissionsFiles.files.description']}</span>
