--- a/dataverse-webapp/src/main/webapp/replaceDatasetfiles.xhtml
+++ b/dataverse-webapp/src/main/webapp/replaceDatasetfiles.xhtml
@@ -76,7 +76,8 @@
                                     <div role="tab" id="headingHTTP" data-toggle="collapse"
                                          data-target="#panelCollapseHTTP"
                                          class="panel-heading text-info"
-                                         aria-controls="panelCollapseHTTP">
+                                         aria-controls="panelCollapseHTTP"
+                                         tabindex="0">
                                         #{bundle['file.fromHTTP']} &#160;<span class="glyphicon glyphicon-chevron-up"/>
                                     </div>
                                     <div id="panelCollapseHTTP" class="panel-collapse collapse in" role="tabpanel"
