--- a/dataverse-webapp/src/main/webapp/editFilesFragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/editFilesFragment.xhtml
@@ -47,7 +47,7 @@
 
                     <div jsf:id="httpPanel" jsf:rendered="#{settingsWrapper.HTTPUpload}" class="panel panel-default">
                         <div role="tab" id="headingHTTP" data-toggle="collapse" data-target="#panelCollapseHTTP"
-                             class="panel-heading text-info" aria-expanded="true" aria-controls="panelCollapseHTTP">
+                             class="panel-heading text-info" aria-expanded="true" aria-controls="panelCollapseHTTP" tabindex="0">
                             #{bundle['file.fromHTTP']} &#160;<span class="glyphicon glyphicon-chevron-up"/>
                         </div>
                         <div id="panelCollapseHTTP" class="panel-collapse collapse in" role="tabpanel"
@@ -190,7 +190,7 @@
                          class="panel panel-default">
                         <!-- NOTE: conditional logic for 'glyphicon-chevron-up' icon in rsync header if HTTP is off, but isn't scalable when a third upload mode is added -->
                         <div role="tab" id="headingRsync" data-toggle="collapse" data-target="#panelCollapseRsync"
-                             class="panel-heading text-info" aria-expanded="true" aria-controls="panelCollapseRsync">
+                             class="panel-heading text-info" aria-expanded="true" aria-controls="panelCollapseRsync" tabindex="0">
                             #{bundle['file.fromRsync']} &#160;<span
                                 class="glyphicon #{!settingsWrapper.HTTPUpload ? 'glyphicon-chevron-up' : 'glyphicon-chevron-down'}"/>
                         </div>
