--- a/dataverse-webapp/src/main/webapp/editMetadata.xhtml
+++ b/dataverse-webapp/src/main/webapp/editMetadata.xhtml
@@ -15,7 +15,7 @@
             <ui:repeat value="#{metadataBlocks}" var="metadataBlockVal" varStatus="block">
                 <div class="panel panel-default" jsf:rendered="#{(showAllBlocks or metadataBlockVal.key.displayOnCreate or !metadataBlockVal.key.isEmpty()
                                                                  or metadataBlockVal.key.isHasRequired())}">
-                    <div data-toggle="collapse" data-target="#panelCollapse#{block.index}" class="panel-heading text-info">
+                    <div data-toggle="collapse" data-target="#panelCollapse#{block.index}" class="panel-heading text-info" tabindex="0">
                         #{metadataBlockVal.key.localeDisplayName} <span class="glyphicon #{block.first || expandAllBlocks  ? 'glyphicon-chevron-up' : 'glyphicon-chevron-down'}"/>
                     </div>
                     <div id="panelCollapse#{block.index}" class="collapse #{block.first || expandAllBlocks ? 'in' : ''}">
