--- a/dataverse-webapp/src/main/webapp/file.xhtml
+++ b/dataverse-webapp/src/main/webapp/file.xhtml
@@ -423,7 +423,7 @@
                                 <!-- END: Add + Edit Metadata Button -->
                                 
                                 <div class="panel panel-default">
-                                    <div data-toggle="collapse" data-target="#panelCollapseFMD" class="panel-heading text-info">
+                                    <div data-toggle="collapse" data-target="#panelCollapseFMD" class="panel-heading text-info" tabindex="0">
                                         #{bundle['file.metadataTab.fileMetadata.header']} &#160;<span class="glyphicon glyphicon-chevron-up"/>
                                     </div>
                                     <div id="panelCollapseFMD" class="collapse in">
