--- a/dataverse-webapp/src/main/webapp/viewMetadata.xhtml
+++ b/dataverse-webapp/src/main/webapp/viewMetadata.xhtml
@@ -13,7 +13,7 @@
         <ui:repeat value="#{metadataBlocks}"
                    var="metadataBlockVal" varStatus="block">
             <div class="panel panel-default">
-                <div data-toggle="collapse" data-target="#panelCollapse#{block.index}" class="panel-heading text-info">
+                <div data-toggle="collapse" data-target="#panelCollapse#{block.index}" class="panel-heading text-info" tabindex="0">
                     #{metadataBlockVal.key.localeDisplayName} &#160;<span class="glyphicon #{block.first?'glyphicon-chevron-up':'glyphicon-chevron-down'}"/>
                 </div>
                 <div id="panelCollapse#{block.index}" class="collapse #{block.first?'in':''}">
