--- a/dataverse-webapp/src/main/webapp/subset/gui_subset.xhtml
+++ b/dataverse-webapp/src/main/webapp/subset/gui_subset.xhtml
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="/subset/javascript/app_subset.js"></script>
     
     <div id="leftpanel" class="sidepanel clearfix">
-        <div class="panel-heading text-center" id="leftpaneltitle" tabindex="0">
+        <div class="panel-heading text-center" id="leftpaneltitle">
             <h3 class="panel-title"><!-- Data File Name -->&#160;</h3>
         </div>
         <div class="btn-toolbar" role="toolbar" style="padding:6px;margin:0;">
