--- a/dataverse-webapp/src/main/webapp/editFilesFragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/editFilesFragment.xhtml
@@ -546,7 +546,7 @@
                                 </ui:fragment>
                             </div>
                         </p:column>
-                        <p:column class="col-file-action text-right">
+                        <p:column class="col-file-action text-right" style="width:130px !important;">
                             <f:facet name="header" class="col-file-action text-right">
                                 <div jsf:id="editFilesRestrictDeletePanel" style="margin-right:14px;" class="btn-group"
                                      jsf:rendered="#{!empty EditDatafilesPage.fileMetadatas and !EditDatafilesPage.workingVersion.hasPackageFile}">
