--- a/dataverse-webapp/src/main/webapp/dataset.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataset.xhtml
@@ -238,7 +238,7 @@
                                             <button type="button"
                                                     class="btn btn-default btn-access #{DatasetPage.dataset.latestVersion.inReview or DatasetPage.dataset.locked ? 'disabled' : ''}"
                                                     onclick="#{DatasetPage.dataset.latestVersion.inReview or DatasetPage.dataset.locked ? 'return false;' : 'sentToReview();'}">
-                                                <span class="glyphicon glyphicon-globe"/> #{DatasetPage.dataset.latestVersion.inReview ? bundle['dataset.disabledSubmittedBtn'] : bundle['dataset.submitBtn']}
+                                                <span class="glyphicon glyphicon-globe"/> #{DatasetPage.dataset.latestVersion.inReview ? bundle['dataset.disabledSubmittedBtn'] : bundle['dataset.submitForReview.submitBtn']}
                                             </button>
                                         </ui:fragment>
     
@@ -936,12 +936,36 @@
                                  update=":messagePanel  @([id$=Messages])"
                                  actionListener="#{DatasetPage.saveLinkingDataverses}"/>
 
-                <p:dialog id="inreview" header="#{bundle['dataset.submitBtn']}" widgetVar="inreview" modal="true">
+                <p:dialog id="inreview" header="#{bundle['dataset.submitForReview.submitBtn']}" widgetVar="inreview" modal="true">
 
                     <p:outputPanel rendered="#{DatasetPage.isLatestDatasetWithAnyFilesIncluded()}">
                         <p class="text-warning">
                             <span class="glyphicon glyphicon-warning-sign"/> #{bundle['dataset.submitMessage']}
                         </p>
+                        <div class="form-group">
+                            <label for="returnReasonTextArea" class="col-sm-3 control-label">#{bundle['dataset.reject.messageBox.label']}</label>
+                            <div class="col-sm-9">
+                                <p:fragment id="submitForReviewMessageFragment">
+                                    <p:inputTextarea id="submitForReviewCustomMessage"
+                                                     rows="3"
+                                                     value="#{DatasetPage.returnToAuthorReason}"
+                                                     maxlength="255"
+                                                     cols="60"
+                                                     counter="submitForReviewCounter"
+                                                     counterTemplate="#{bundle['dataset.reject.messageBox.counter']}"
+                                                     autoResize="false"
+                                                     styleClass="form-control"
+                                    >
+                                    </p:inputTextarea>
+                                    <h:message for="submitForReviewCustomMessage" styleClass="bg-danger text-danger"/>
+                                    <p>
+                                        <h:outputText id="submitForReviewCounter"/>
+                                    </p>
+                                </p:fragment>
+                            </div>
+                            <p:watermark for="submitForReviewCustomMessage" value="#{bundle['dataset.submitForReview.customMessage.watermark']}"
+                                         id="submitForReviewWatermark"/>
+                        </div>
                         <div class="button-block">
                             <p:commandButton value="#{bundle.submit}" onclick="PF('inreview').hide();"
                                              action="#{DatasetPage.submitDataset}"
