--- a/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
@@ -167,6 +167,9 @@
                                                         <o:param>
                                                             #{DataverseUserPage.getRequestorEmail(item)}
                                                         </o:param>
+                                                        <o:param rendered="#{not empty DataverseUserPage.getReasonForReturn(item)}">
+                                                            #{bundle['notification.wasSubmittedForReview.contributorMessage.prefix'] + " " + DataverseUserPage.getReasonForReturn(item)}
+                                                        </o:param>
                                                     </h:outputFormat>
                                                 </ui:fragment>
                                                 <ui:fragment rendered="#{item.type == 'RETURNEDDS'}">
