--- a/dataverse-webapp/src/main/webapp/dataset.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataset.xhtml
@@ -948,7 +948,7 @@
                                 <p:fragment id="submitForReviewMessageFragment">
                                     <p:inputTextarea id="submitForReviewCustomMessage"
                                                      rows="3"
-                                                     value="#{DatasetPage.returnToAuthorReason}"
+                                                     value="#{DatasetPage.contributorMessageToCurator}"
                                                      maxlength="255"
                                                      cols="60"
                                                      counter="submitForReviewCounter"
@@ -967,9 +967,12 @@
                                          id="submitForReviewWatermark"/>
                         </div>
                         <div class="button-block">
-                            <p:commandButton value="#{bundle.submit}" onclick="PF('inreview').hide();"
-                                             action="#{DatasetPage.submitDataset}"
-                                             immediate="true"/>
+                            <p:commandLink value="#{bundle.submit}"
+                                           oncomplete="PF('inreview').hide();"
+                                           actionListener="#{DatasetPage.submitDataset()}"
+                                           update=":messagePanel topDatasetBlockFragment"
+                                           styleClass="btn btn-default btn-access"
+                            />
                             <p:commandButton value="#{bundle.cancel}"
                                              onclick="PF('inreview').hide();" type="button"
                                              immediate="true"/>
@@ -1179,7 +1182,7 @@
                     <div class="button-block">
                         <p:commandLink styleClass="btn btn-default btn-access"
                                        value="#{bundle.ok}"
-                                       update=":messagePanel returnReasonFragment"
+                                       update=":messagePanel returnReasonFragment topDatasetBlockFragment"
                                        oncomplete="if (args &amp;&amp; !args.validationFailed) PF('sendBackToContributor').hide();"
                                        actionListener="#{DatasetPage.sendBackToContributor()}"
                         >
