--- a/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
@@ -167,10 +167,10 @@
                                                         <o:param>
                                                             #{DataverseUserPage.getRequestorEmail(item)}
                                                         </o:param>
-                                                        <o:param rendered="#{not empty DataverseUserPage.getReasonForReturn(item)}">
+                                                        <o:param rendered="#{not empty DataverseUserPage.additionalMessage(item)}">
                                                             #{bundle['notification.wasSubmittedForReview.contributorMessage.prefix']
                                                                 .concat(" ")
-                                                                .concat(DataverseUserPage.getReasonForReturn(item))}
+                                                                .concat(DataverseUserPage.additionalMessage(item))}
                                                         </o:param>
                                                     </h:outputFormat>
                                                 </ui:fragment>
@@ -184,7 +184,7 @@
                                                             <a href="/dataverse/#{item.theObject.getDataset().getOwner().getAlias()}" title="#{item.theObject.getDataset().getOwner().getDisplayName()}">#{item.theObject.getDataset().getOwner().getDisplayName()}</a>
                                                         </o:param>
                                                         <o:param>
-                                                            #{DataverseUserPage.getReasonForReturn(item)}
+                                                            #{DataverseUserPage.additionalMessage(item)}
                                                         </o:param>
                                                     </h:outputFormat>
                                                 </ui:fragment>
