--- a/dataverse-webapp/src/main/webapp/termsofuse.xhtml
+++ b/dataverse-webapp/src/main/webapp/termsofuse.xhtml
@@ -3,6 +3,7 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui" xmlns:o="http://omnifaces.org/ui">
 
+    <!--@elvariable id="consents" type="java.util.List<edu.harvard.iq.dataverse.consent.ConsentDto>"-->
     <div class="form-group">
         <label for="position" class="col-sm-3 control-label">
             #{bundle['user.acccountterms']} <span class="glyphicon glyphicon-asterisk text-danger"
@@ -26,7 +27,7 @@
             </div>
 
             <div class="checkbox">
-                <p:repeat value="#{DataverseUserPage.consents}" var="consent">
+                <p:repeat value="#{consents}" var="consent">
 
                     <p:selectBooleanCheckbox id="consent"
                                              value="#{consent.consentDetails.accepted}"
