--- a/dataverse-webapp/src/main/webapp/editFilesFragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/editFilesFragment.xhtml
@@ -145,6 +145,7 @@
                                 <!-- changes to this part of the fragment. -->
 
                                 <p:fileUpload id="fileUpload"
+                                              class="#{lockedFromEdits || fileUploadDisabled != null ? 'disabled' : ''}"
                                               dragDropSupport="true"
                                               auto="true"
                                               multiple="#{isMultiplyFilesUploadAllowed}"
